# 3_django_EM

./: README.md  config.py  pyproject.toml
app/: settings.py  urls.py
pets/: models.py  serializers.py  urls.py  views.py
pets/migrations/: 0001_initial.py
